WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
220965
Fix logic error in shouldComputeLogicalHeightFromAspectRatio
https://bugs.webkit.org/show_bug.cgi?id=220965
Summary
Fix logic error in shouldComputeLogicalHeightFromAspectRatio
Rob Buis
Reported
2021-01-26 01:13:50 PST
Fix logic error in shouldComputeLogicalHeightFromAspectRatio.
Attachments
Patch
(4.28 KB, patch)
2021-01-26 01:34 PST
,
Rob Buis
no flags
Details
Formatted Diff
Diff
Patch
(4.18 KB, patch)
2021-01-26 12:35 PST
,
Rob Buis
no flags
Details
Formatted Diff
Diff
Patch
(4.11 KB, patch)
2021-01-26 13:54 PST
,
Rob Buis
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Rob Buis
Comment 1
2021-01-26 01:34:21 PST
Created
attachment 418380
[details]
Patch
EWS Watchlist
Comment 2
2021-01-26 01:35:06 PST
This patch modifies the imported WPT tests. Please ensure that any changes on the tests (not coming from a WPT import) are exported to WPT. Please see
https://trac.webkit.org/wiki/WPTExportProcess
Rob Buis
Comment 3
2021-01-26 12:35:58 PST
Created
attachment 418463
[details]
Patch
Rob Buis
Comment 4
2021-01-26 13:54:13 PST
Created
attachment 418474
[details]
Patch
Darin Adler
Comment 5
2021-01-28 13:40:29 PST
Comment on
attachment 418474
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=418474&action=review
> LayoutTests/TestExpectations:4452 > +
webkit.org/b/214463
imported/w3c/web-platform-tests/css/css-sizing/aspect-ratio/intrinsic-size-007.html [ ImageOnlyFailure ]
No mention of this in the change log. Is this newly failing? Why?
Rob Buis
Comment 6
2021-01-28 23:47:59 PST
Comment on
attachment 418474
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=418474&action=review
>> LayoutTests/TestExpectations:4452 >> +
webkit.org/b/214463
imported/w3c/web-platform-tests/css/css-sizing/aspect-ratio/intrinsic-size-007.html [ ImageOnlyFailure ] > > No mention of this in the change log. Is this newly failing? Why?
I am not sure yet. I expect to eventually address it with
https://bugs.webkit.org/show_bug.cgi?id=220861
.
EWS
Comment 7
2021-01-29 00:05:00 PST
Committed
r272049
: <
https://trac.webkit.org/changeset/272049
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 418474
[details]
.
Radar WebKit Bug Importer
Comment 8
2021-01-29 00:06:14 PST
<
rdar://problem/73743737
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug