Fix logic error in shouldComputeLogicalHeightFromAspectRatio https://bugs.webkit.org/show_bug.cgi?id=220965

Patch by Rob Buis <rbuis@igalia.com> on 2021-01-29
Reviewed by Darin Adler.

Source/WebCore:

Logical height that uses percentages should be computed through
aspect-ratio only if it is not resolvable.

Test: imported/w3c/web-platform-tests/css/css-sizing/aspect-ratio/percentage-resolution-005.html

* rendering/RenderBox.cpp:
(WebCore::RenderBox::shouldComputeLogicalHeightFromAspectRatio const):

LayoutTests:

percentage-resolution-005.html now passes.

* TestExpectations:

Canonical link: https://commits.webkit.org/233468@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@272049 268f45cc-cd09-0410-ab3c-d52691b4dbfc